--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "proxy": "http://interview.agileengine.com",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.1",
     "cra-template-typescript": "1.1.2",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-modal": "^3.14.3",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
-    "use-http": "^1.0.23",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -40,10 +40,11 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.172",
+    "@types/lodash": "^4.14.173",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "@types/react-modal": "^3.12.1",
+    "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.12",
     "typescript": "^4.3.5"
